<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_home_bg">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tl_tab_bar"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_87"
            android:background="@drawable/view_tab_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/purple_faint"
            app:tabTextAppearance="@style/TabNames">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabNames"
                android:icon="@drawable/ic_home_tab"
                android:text="@string/TabNameHome" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TabNames"
                android:icon="@drawable/ic_catalouge_tab"
                android:text="@string/TabNameCatalogue" />

            <com.google.android.material.tabs.TabItem
                style="@style/TabNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_favorite_tab"
                android:text="@string/TabNameFavorite" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_profile"
                style="@style/TabNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_profile_tab"
                android:text="@string/TabNameProfile" />
        </com.google.android.material.tabs.TabLayout>

        <View
            android:id="@+id/view_cart_curve"
            android:layout_width="@dimen/dp_116"
            android:layout_height="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_55"
            android:background="@drawable/view_cart_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tl_tab_bar" />

        <ImageView
            android:id="@+id/img_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_19"
            android:layout_marginTop="@dimen/dp_17"
            android:src="@drawable/ic_cart_img"
            app:layout_constraintStart_toStartOf="@id/view_cart_curve"
            app:layout_constraintTop_toTopOf="@id/view_cart_curve"
            android:contentDescription="@string/HintCart"
            />

        <TextView
            android:id="@+id/txt_cart_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_9"
            android:layout_marginTop="@dimen/dp_13"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/TxtDemoPrice"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"
            app:layout_constraintStart_toEndOf="@id/img_cart"
            app:layout_constraintTop_toTopOf="@id/view_cart_curve" />

        <TextView
            android:id="@+id/txt_cart_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_9"
            android:fontFamily="@font/sf_pro_text_bold"
            android:text="@string/TxtCartItem"
            android:textColor="@color/white_faint"
            android:textSize="@dimen/sp_11"
            app:layout_constraintStart_toEndOf="@id/img_cart"
            app:layout_constraintTop_toBottomOf="@id/txt_cart_total" />


        <FrameLayout
            android:id="@+id/frame_product_category_main_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>