<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.activities.EnterPhoneActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_enter_phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_right_curve"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_marginBottom="@dimen/dp_32"
            android:background="@drawable/view_lower_curve_bg"
            app:layout_constraintBottom_toTopOf="@+id/txt_enter_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_67"
            android:fontFamily="@font/sf_pro_text_bold"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:text="@string/TxtWhatPhoneNo"
            android:textAppearance="@style/WhatIsPhone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_right_curve" />

        <TextView
            android:id="@+id/txt_enter_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:fontFamily="@font/sf_pro_text_regular"
            android:lineSpacingExtra="@dimen/sp_2"
            android:text="@string/TxtEnterPhoneNo"
            android:textAppearance="@style/PleaseEnterPhone"
            app:layout_constraintBottom_toTopOf="@+id/edt_phone_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/edt_phone_no_bg"
            android:gravity="center"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/btn_send_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="@dimen/dp_327"
            android:layout_height="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_387"
            android:background="@drawable/btn_corner_curve_bg"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="@string/BtnSendVerification"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/sf_pro_text_bold"
            android:gravity="center"
            android:text="@string/BtnSkip"
            android:textAppearance="@style/SkipBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_send_code"
            app:layout_constraintVertical_bias="0.003" />

        <Button
            android:id="@+id/btn_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/edt_phone_no_bg"
            android:drawableLeft="@drawable/ic_google_icon"
            android:text="@string/BtnTxtSignInGoogle"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_skip" />



        <ProgressBar
            android:id="@+id/progress_bar_auth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:indeterminateTint="@color/purple_faint"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_right_curve"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>